Dash nav is no longer sticky on smaller devices

--- a/frontend/layouts/dashboard/DashboardLayout.module.scss
+++ b/frontend/layouts/dashboard/DashboardLayout.module.scss
@@ -255,6 +255,9 @@
     }
 }
 @media (max-width: 500px) {
+    .navbar {
+        position: unset !important;
+    }
     .sidebar {
         height: var(--sidebar-height);
         top: calc(100dvh - var(--sidebar-height));
